# FasterTransformer

./: CMakeLists.txt
docker/: Dockerfile.torch
examples/cpp/gptj/: gptj_example.cc
examples/cpp/llama/: llama_config.ini  llama_example.cc  start_ids.csv
examples/cpp/multi_gpu_gpt/: gpt_config.ini  gpt_example_utils.h  multi_gpu_gpt_example.cc  start_ids.csv
examples/pytorch/agm/: alexagm.py
examples/pytorch/agm/atm_decoder/: README  configuration_atm_decoder.py  modeling_atm_decoder.py  test.py
examples/pytorch/agm/utils/: ft_decoding.py  huggingface_agm_ckpt_convert.py
src/fastertransformer/kernels/: CMakeLists.txt  activation_kernels.cu  activation_kernels.h  ban_repeat_ngram.cu  ban_repeat_ngram.h  bert_preprocess_kernels.cu  decoder_masked_multihead_attention.cu  decoder_masked_multihead_attention.h  decoder_masked_multihead_attention_utils.h  decoding_kernels.cu  moe_kernels.cu  moe_kernels.h  unfused_attention_kernels.cu  unfused_attention_kernels.h
src/fastertransformer/kernels/decoder_masked_multihead_attention/: decoder_masked_multihead_attention_104.cu  decoder_masked_multihead_attention_128.cu  decoder_masked_multihead_attention_144.cu  decoder_masked_multihead_attention_160.cu  decoder_masked_multihead_attention_192.cu  decoder_masked_multihead_attention_224.cu  decoder_masked_multihead_attention_256.cu  decoder_masked_multihead_attention_32.cu  decoder_masked_multihead_attention_48.cu  decoder_masked_multihead_attention_64.cu  decoder_masked_multihead_attention_80.cu  decoder_masked_multihead_attention_96.cu  decoder_masked_multihead_attention_template.hpp
src/fastertransformer/layers/: DynamicDecodeLayer.cc  DynamicDecodeLayer.h  FfnLayer.cc  FfnLayer.h  TensorParallelSiluFfnLayer.cc  TensorParallelSiluFfnLayer.h
src/fastertransformer/layers/attention_layers/: DecoderSelfAttentionLayer.cc  DecoderSelfAttentionLayer.h  GptContextAttentionLayer.cc  GptContextAttentionLayer.h  TensorParallelDecoderSelfAttentionLayer.cc  TensorParallelDecoderSelfAttentionLayer.h  TensorParallelGptContextAttentionLayer.cc  TensorParallelGptContextAttentionLayer.h
src/fastertransformer/models/: CMakeLists.txt
src/fastertransformer/models/agm/: AgmAdapterWeight.cc  AgmAdapterWeight.h  AgmContextDecoder.cc  AgmContextDecoder.h  AgmDecoder.cc  AgmDecoder.h  AgmDecoderLayerWeight.cc  AgmDecoderLayerWeight.h  AgmDecoding.cc  AgmDecoding.h  AgmDecodingWeight.cc  AgmDecodingWeight.h  CMakeLists.txt
src/fastertransformer/models/bart/: BartEncoderLayerWeight.cc  BartEncoderWeight.cc
src/fastertransformer/models/gptj/: GptJ.cc
src/fastertransformer/models/llama/: Llama.cc  Llama.h  LlamaContextDecoder.cc  (+7 more)
src/fastertransformer/th_op/: CMakeLists.txt
src/fastertransformer/triton_backend/: CMakeLists.txt  transformer_triton_backend.hpp
src/fastertransformer/utils/: CMakeLists.txt  allocator.h  cuda_fp8_utils.h  cuda_utils.cc  memory_utils.cu  nccl_utils.cc
tests/moe/: th_moe_ops.cc
(+19 files in other folders)
